Fix bug #15944: weird gap on mobile articles with sidebar

--- a/media/css/protocol/basic-article.scss
+++ b/media/css/protocol/basic-article.scss
@@ -8,6 +8,12 @@
 @import '~@mozilla-protocol/core/protocol/css/templates/main-with-sidebar';
 @import 'components/newsletter-form';
 
+.mzp-l-content.mzp-has-sidebar:has(> .mzp-l-sidebar:first-child) {
+    @media screen and (max-width: #{$screen-md - 1px}) {
+        padding-top: 0;
+    }
+}
+
 .c-article-meta-updated {
     @include text-display-xs;
 }
